# drf-with-elastic-search

./: .env  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
images/: elasticsearch.py  filters.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
images/migrations/: 0001_initial.py
imagoimages/: asgi.py  settings.py  urls.py  wsgi.py
